Correction contraste titre page 1 et 2

--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .tc-white {
-    color: black;
+    color: #F3976C;
 }
 
 .btn-atomic-tangerine {
